# solutionplex

./: .gitignore  AGENTS.md  README.md  opencode.json  run.bat  setup.bat  start-mongo.bat  start-mongo.ps1  vercel.json
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/api/: client.ts  queryKeys.ts
client/src/auth/: AuthContext.tsx  Can.tsx  guards.tsx  jwt.ts
client/src/components/: AdminManagerView.css  AdminManagerView.tsx  AppsTab.tsx  ArchitectureTab.tsx  CardTitle.tsx  CharCounter.tsx  ConfirmDialog.css  ConfirmDialog.tsx  CreateAppModal.tsx  CustomSelect.tsx  DeleteButton.tsx  DetailView.tsx  HiddenBadge.tsx  HiddenToggle.tsx  InfrastructureTab.tsx  LabelPreview.tsx  LoginView.css  LoginView.tsx  TabStyles.css  (+12 more)
docs/foundation/: final_report.md  goal.md  plan.md
docs/rbac/: final_report.md  goal.md  plan1.md  plan2.md  plan3.md  plan4.md  research.md  review.md
docs/superadmin-admin-manager/: final_report.md  goal.md  plan.md
graph-cosmet/: app.js  index.html  style.css
server/: config.py  main.py  pyproject.toml
server/database/: client.py
server/routers/: admin.py  apps.py  architectures.py  auth.py  infrastructures.py  problems.py  search.py  solutions.py  technologies.py
server/schemas/: models.py
server/security/: __init__.py  deps.py  jwt.py  passwords.py
server/services/: apps.py  architectures.py  infrastructures.py  problems.py  solutions.py  technologies.py  users.py  visibility.py
server/tests/: conftest.py  test_admin_api.py  test_auth.py  test_config.py  test_rbac_guards.py  test_routers.py  test_schema_hidden.py  test_seed_superadmin.py  test_visibility.py
(+13 files in other folders)
