[project]
name = "solutionplex-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "motor>=3.7.1",
    "pydantic>=2.13.4",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
]
