[project]
name = "solutionplex-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pyright]
extraPaths = [".."]
pythonVersion = "3.13"

[tool.pytest.ini_options]
pythonpath = [".."]

